fix(Checkbox): reset paragraph spacing in markdown labels

--- a/src/Checkbox/index.scss
+++ b/src/Checkbox/index.scss
@@ -97,6 +97,9 @@
 
   .nds-checkbox-label {
     flex-grow: 1;
+    p {
+      margin: 0;
+    }
   }
 
   .narmi-icon-check {
